--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <section>
     <div class="introduction">
         <h2 class="intro">Be less busy</h2>
-        <p class="intro-description">Helpr is a free, messaging-based service that makes your life easier and more convenient. From delivering your groceries to having a pumbler fix your kitchen sink drain, we’ve got you covered. All you need to do is ask and we’ll make it happen. In a few minutes.</p>
+        <p class="intro-description">Helpr is a free, messaging-based, on demand service that takes the pain out of household activities. From delivering your groceries to having a pumbler fix your kitchen sink drain, we’ve got you covered. Make a request by instant messaging and consider it done. Hassle-free</p>
         <div class>
             <img src="img/be-less-busy.png" class="iphone-1" alt="Helpr - Your on demand assistant for household chores and services"/>
         </div>
@@ -129,16 +129,14 @@
         <img src="img/checkout.png" class="screens" alt="Helpr - Simple checkout" />
     </div>
 </section>
-<section class="early-access">
-    <div class="main-early-wrap">
-        <div class="early-wrap">
-            <h2 class="early">Be the first to know when launch</h2>
-            <form id="email" method="post">
-                <div class="field-wrap">
-                    <input type="email" name="email" placeholder="Enter your email address...">
-                    <button type="submit" class="btn-submit">Get early access</button>
-                </div>
-            </form>
+<section class="reclaim-life">
+    <div class="rec">
+        <div class="reclaim-wrap">
+            <h2 class="reclaim">Reclaim your life</h2>
+            <p class="reclaim-description">Less household chores. More quality time with friends and family. Our helprs are on call to help you with what you need when you need it.</p>
+        </div>
+        <div class="people-icon">
+            <img src="img/people.png" class="people" alt="Helpr" />
         </div>
     </div>
 </section>
@@ -149,6 +147,19 @@
         <img src="img/instacart.png" class="instacart" alt="Helpr - Instacart" />
         <img src="img/handy.png" class="handy" alt="Helpr - Handy" />
         <img src="img/flycleaners.png" class="fc" alt="Helpr - Flycleaners" />
+    </div>
+</section>
+<section class="early-access">
+    <div class="main-early-wrap">
+        <div class="early-wrap">
+            <h2 class="early">Be the first to know when we launch</h2>
+            <form id="email" method="post">
+                <div class="field-wrap">
+                    <input type="email-bottom" name="email" placeholder="Enter your email address...">
+                    <button type="submit" class="btn-submit">Get early access</button>
+                </div>
+            </form>
+        </div>
     </div>
 </section>
 <footer>
