adding more sections

--- a/index.html
+++ b/index.html
@@ -125,12 +125,32 @@
 </section>
 <section class="reclaim-life">
     <div class="rec">
-        <div class="reclaim-wrap">
-            <h2 class="reclaim">Reclaim your life</h2>
-            <p class="reclaim-description">Less household chores. More quality time with friends and family. Our helprs are on call to help you with what you need when you need it.</p>
+        <div class="status-main">
+            <div class="status-wrap">
+                <h2 class="status">Check the status of open requests</h2>
+                <p class="status-description">As soon as you place a request, you can start monitoring its status (pending, helpr on the way, etc). You're the boss.</p>
+            </div>
+            <div class="status-icon">
+                <img src="img/status.png" class="status-ico" alt="Helpr" />
+            </div>
         </div>
-        <div class="people-icon">
-            <img src="img/people.png" class="people" alt="Helpr" />
+        <div class="reorder-main">
+            <div class="reorder-wrap">
+                <h2 class="reorder">Easily re-order the same service</h2>
+                <p class="reorder-description">In just a few taps, you'll be able to re-order the same groceries from last week or have someone pick-up your dirty clothes for a new dry cleaning.</p>
+            </div>
+            <div class="reorder-icon">
+                <img src="img/reorder.png" class="reorder-ico" alt="Helpr" />
+            </div>
+        </div>
+        <div class="reclaim-main">
+            <div class="reclaim-wrap">
+                <h2 class="reclaim">Reclaim your life</h2>
+                <p class="reclaim-description">Less household chores. More quality time with friends and family. Our helprs are on call to help you with what you need when you need it.</p>
+            </div>
+            <div class="people-icon">
+                <img src="img/people.png" class="people" alt="Helpr" />
+            </div>
         </div>
     </div>
 </section>
