adding responsive code

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/sweetalert2.css">
-    <meta name="author" content="Pedro Henrique Marques">
+    <meta name="author" content="Helpr">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta property="og:title" content="Pedro Henrique Marques | Product Manager & Entrepreneur">
-    <meta property="og:description" content="Hi! My name is Pedro Henrique Marques and I'm a Product Manager & Entrepreneur.">
+    <meta property="og:title" content="Helpr | Your on demand assistant for household chores & services">
+    <meta property="og:description" content="Helpr is a free, messaging-based, on demand service that takes the pain out of household activities. From delivering your groceries to having a pumbler fix your kitchen sink drain, we’ve got you covered. Make a request by instant messaging and consider it done. Hassle-free.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.pedromarques.me/img/socialsharing.png">
-    <meta property="og:site_name" content="Pedro Henrique Marques">
+    <meta property="og:image" content="https://www.joinhelpr.com/img/socialsharing.png">
+    <meta property="og:site_name" content="Helpr">
     <meta property="og:locale" content="en_US">
-    <meta property="og:url" content="https://www.pedromarques.me/">
-    <meta name="description" content="Hi! My name is Pedro Henrique Marques and I'm a Product Manager & Entrepreneur."> 
-    <meta name="keywords" content="location, share your location, location sharing, mobile, app, safety, traffic jam, drive safe, friends, family, iphone, places, where are you going, ETA, on the way, push notifications, map, traffic">
-    <link rel="canonical" href="http://getpinpush.com">
+    <meta property="og:url" content="https://www.joinhelpr.me/">
+    <meta name="description" content="Helpr | Your on demand assistant for household chores & services"> 
+    <meta name="keywords" content="on demand household labor, household chores, household services, app, ios, sharing economy, instacart, taskrabbit, cleanly, flycleaners, households, home services, household activities, on the go">
+    <link rel="canonical" href="http://joinhelpr.com">
     <script src="https://use.typekit.net/soi4zzg.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -26,7 +26,6 @@
 </head>
 
 <body>
-
 
 <div class="fullscreen background">
     <nav class="top">
@@ -47,17 +46,15 @@
         </div>
     </div>
 </div>
-
 <section>
     <div class="introduction">
         <h2 class="intro">Be less busy</h2>
-        <p class="intro-description">Helpr is a free, messaging-based, on demand service that takes the pain out of household activities. From delivering your groceries to having a pumbler fix your kitchen sink drain, we’ve got you covered. Make a request by instant messaging and consider it done. Hassle-free</p>
+        <p class="intro-description">Helpr is a free, messaging-based, on demand service that takes the pain out of household activities. From delivering your groceries to having a pumbler fix your kitchen sink drain, we’ve got you covered. Make a request by instant messaging and consider it done. Hassle-free.</p>
         <div class>
             <img src="img/iphone-top.png" class="iphone-1" alt="Helpr - Your on demand assistant for household chores and services"/>
         </div>
     </div>
 </section>
-
 <section class="house-cleaning">
     <div class="main-cleaning-wrap">
         <div class="cleaning-wrap">
@@ -128,7 +125,7 @@
         <div class="status-main">
             <div class="status-wrap">
                 <h2 class="status">Check the status of open requests</h2>
-                <p class="status-description">As soon as you place a request, you can start monitoring its status (pending, helpr on the way, etc). You're the boss.</p>
+                <p class="status-description">As soon as you place a request, you can start monitoring its status (pending, helpr on the way, etc). You're in complete control.</p>
             </div>
             <div class="status-icon">
                 <img src="img/status.png" class="status-ico" alt="Helpr" />
@@ -203,6 +200,6 @@
 <script>
  new WOW().init();
 </script>
-</body>
 
+</body>
 </html>
