adding responsive code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://www.joinhelpr.com/img/socialsharing.png">
     <meta property="og:site_name" content="Helpr">
     <meta property="og:locale" content="en_US">
-    <meta property="og:url" content="https://www.joinhelpr.me/">
+    <meta property="og:url" content="https://www.joinhelpr.com/">
     <meta name="description" content="Helpr | Your on demand assistant for household chores & services"> 
     <meta name="keywords" content="on demand household labor, household chores, household services, app, ios, sharing economy, instacart, taskrabbit, cleanly, flycleaners, households, home services, household activities, on the go">
     <link rel="canonical" href="http://joinhelpr.com">
